test/pass/macro-param-local.rnp
macro foo($a) {
  $a * 2
}

{
  let bar = 1;
  foo(bar);
}
---
1 sp0
l0 2 *
p
